# OpenCReports

./: .gitignore  AUTHORS  ChangeLog  LICENSE  LICENSE.bundled  Makefile.am  README.md  clangconfig.sh  cleanup.sh  configure.ac  debugconfig.sh  fontconfig.supp  ignore.supp  meson.build  meson_options.txt  opencreport.dtd  opencreportdata.dtd  opencreports.pc.in  prodconfig.sh
bindings/php/: .gitignore  barcode-object.c  break-object.c  col-object.c  config.m4  ds-object.c  eresult-object.c  expr-object.c  genline-object.c  hline-object.c  image-object.c  line-element-object.c  line-object.c  ocrpt-object.c  ocrptinit.c  opencreport.c  output-element-object.c  output-object.c  part-object.c  php_opencreport.h  qresult-object.c  query-object.c  report-object.c  rlibcompat.c  row-object.c  text-object.c  variable-object.c
bindings/php/1/: ocrpt-test.php  ocrpt-test1.php  ocrpt-test2.php  ocrpt-test3.php  ocrpt-vertest.php  x.php  xx.php
doc/: Makefile.am  OpenCReports.sgm  OpenCReports.sgm.in  breaks.sgm  c-api-ds-impl.sgm  c-api-ref-high.sgm  c-api-ref-low.sgm  c-api-reference.sgm  docbook-utils.dsl  dsandqueries.sgm  examples.sgm  expressions.sgm  formatting.sgm  functions.sgm  introduction.sgm  jadetex.cfg  license.sgm  meson.build  php-api-reference.sgm  stylesheet-common.xsl  stylesheet-html-common.xsl  stylesheet-html-nochunk.xsl  stylesheet-speedup-common.xsl  stylesheet-speedup-xhtml.xsl  variables.sgm  xmldescription.sgm
doc/images/: namedcolors.dia
examples/: esc-xml
examples/example1/: .gitignore  example1.c  example1.php  example1.xml  example1rlib.php
examples/example2/: .gitignore  example2.c  example2.php  example2.xml  example2rlib.php
examples/example3/: .gitignore  example3.c  example3.php  example3.xml  example3rlib.php
examples/example4/: .gitignore  example4.c  example4.php  example4.xml  example4rlib.php
examples/example5/: .gitignore  example5.c  example5.php  example5.xml  example5rlib.php
examples/example6/: .gitignore  example6.c  example6.php  example6.xml  example6rlib.php
examples/example7/: .gitignore  example7.c  example7.php  example7.xml  example7rlib.php
include/: Makefile.am  meson.build  opencreport.h
libsrc/: Makefile.am  api.c  array-source.c  barcode.c  barcode.h  breaks.c  breaks.h  cairotest.c  chart.c  chart.h  color.c  color.h  common-output.c  common-output.h  csv-output.c  csv-output.h  datasource.c  datasource.h  datetime.c  datetime.h  db-source.c  environment.c  environment.h  exprutil.c  exprutil.h  fallthrough.h  formatting.c  formatting.h  free.c  free.h  functions.c  functions.h  html-output.c  html-output.h  json-output.c  json-output.h  layout.c  layout.h  listutil.c  listutil.h  (+34 more)
m4/: ax_try_link_flag.m4
tests/: Makefile.am  array2_test.c  array2_test.php  array_resolve_test.c  array_test.c  array_test.php  array_xml_test.c  array_xml_test.php  arrayquery.xml  break2_test.c  break_multi2_test.c  break_multi2_test.php  break_multi2_test.xml  break_multi3_test.c  break_multi3_test.php  break_multi3_test.xml  break_multi4_test.c  break_multi4_test.php  break_multi5_test.c  break_multi5_test.php  break_multi6_test.c  break_multi6_test.php  break_multi7_test.c  break_multi7_test.php  break_multi8_test.c  break_multi8_test.php  break_multi_test.c  break_multi_test.php  break_rownum_xml_test.c  break_rownum_xml_test.php  break_suppressblank_test.c  break_suppressblank_test.xml  break_test.c  break_test.php  break_xml2_test.c  break_xml2_test.php  break_xml3_test.c  break_xml3_test.php  break_xml_test.c  break_xml_test.php  (+749 more)
tests/expected/: array2_test.php.stdout.2  array2_test.stdout.1  array_resolve_test.stdout  array_resolve_test.stdout.2  array_test.stdout.1  array_test.stdout.2  array_xml_test.php.stdout.1  array_xml_test.stdout.2  break2_test.stderr  break2_test.stdout  break_multi2_test.php.stdout  break_multi6_test.php.stdout.2  break_multi6_test.stdout.1  break_multi8_test.stdout  break_suppressblank_test.csv  break_suppressblank_test.html  break_suppressblank_test.json  break_suppressblank_test.txt  break_suppressblank_test.xml  break_test.php.stdout  break_xml3_test.stdout  canonicalize_path_test.stdout  color_test.stdout  constify2_test.stdout  constify_test.php.stdout  constify_test.stdout  csv2_test.stdout  csv_array_test.php.stdout.2  csv_array_test.stdout  csv_array_test.stdout.1  csv_array_test.stdout.2  csv_array_xml2_test.stdout.2  csv_array_xml_test.php.stdout.2  csv_array_xml_test.stdout.1  csv_xml_test.php.stdout.2  custom_variable_test.stdout  datetime_expr_test.php.stdout.1  datetime_expr_test.php.stdout.2  datetime_expr_test.stdout  datetime_expr_test.stdout.2  (+520 more)
tests/images/: images3  images4  images5
tests/locale/hu_HU/LC_MESSAGES/: translate_test.po
tests/mariadb/: create.sql  ocrpt.cnf
tests/odbc/: odbc.ini  odbcinst.ini
tests/postgresql/: create.sql
